tests/ui/traits/new-solver/dont-type_of-tait-in-defining-scope.is_send.stderr
error: item does not constrain `Foo::{opaque#0}`, but has it in its signature
  --> $DIR/dont-type_of-tait-in-defining-scope.rs:14:4
   |
LL | fn test(_: Foo) {
   |    ^^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/dont-type_of-tait-in-defining-scope.rs:7:12
   |
LL | type Foo = impl Send;
   |            ^^^^^^^^^

error: aborting due to previous error

